--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_storage: ^11.0.14
   provider: ^6.0.5
+  dotted_border: ^2.0.0+3
+  image_picker: ^0.8.6+3
+  file_picker: ^5.2.5
+  agora_rtc_engine: ^5.0.1
+  permission_handler: ^10.2.0
   flutter:
     sdk: flutter
 
