--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  timeago: ^3.2.2
   cloud_firestore: ^4.4.3
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.9
@@ -39,6 +40,9 @@ dependencies:
   file_picker: ^5.2.5
   agora_rtc_engine: ^5.0.1
   permission_handler: ^10.2.0
+  http: ^0.13.5
+  uuid: ^3.0.6
+  
   flutter:
     sdk: flutter
 
